--- a/index.html
+++ b/index.html
@@ -27,5 +27,36 @@
         <td>2 раза в <br>неделю</td>
     </tr>
 </table>
+
+<table class="table2">
+    <tr>
+        <th>Basic</th>
+    </tr>
+    <tr class="blue">
+        <td><div class="colo">$19/<br>mo</div></td>
+    </tr>
+    <tr>
+        <td>1 Website</td>
+    </tr>
+    <tr>
+        <td>1 GB Storage</td>
+    </tr>
+    <tr>
+        <td>10GB Bandwidth</td>
+    </tr>
+    <tr>
+        <td>3 Month Support</td>
+    </tr>
+    <tr>
+        <td>Unlimeted Sub-domains</td>
+    </tr>
+    <tr>
+        <td>5 Database</td>
+    </tr>
+    <tr class="blue">
+        <td>Buy Now</td>
+    </tr>
+
+</table>
 </body>
 </html>
